# window_sieve

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  hardware_info.c  hardware_info.h  makefile  makefile.mak  trial_division.c  window_sieve.c
.github/workflows/: c-cpp.yml  ci.yml
include/: trial_division.h  window_sieve.h
src/: hardware_info.c  window_sieve.c
